ready to deploy

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="col">
-              <img   src="https://img.freepik.com/free-vector/oops-404-error-with-broken-robot-concept-illustration_114360-1932.jpg?w=740&t=st=1670221400~exp=1670222000~hmac=558833d946061277a177763926806968f096e81c211803a6d55f0ae3fb3bcf7b" alt="image"/>
+              <img   src="https://fcit.usf.edu/matrix/wp-content/uploads/2016/12/Robot-02-B.png" alt="image"/>
         </div>
       
       
@@ -34,7 +34,7 @@
 
   </div>
   <div *ngIf="user" class="card text-center">
-    <button mat-raised-button color="warn" (click)="signOut()">Leave</button>
+    <button mat-raised-button color="warn" (click)="signOut()">Sign Out</button>
   </div>
 
 
